wavparse: check for not NULL before clearing adapter

In case wavparse receives a manually injected FLUSH_STOP event
while operating in pull mode we get criticals because we'd try
to clear a NULL adapter.

https://bugzilla.gnome.org/show_bug.cgi?id=777123